Javac arguments little update/refactor.